# struct-table

./: .gitignore  README.md
client/: codegen.ts  graphql.schema.json  jest.config.js  package-lock.json  package.json  tsconfig.json
client/app/: page.tsx
client/app/about/: page.tsx
client/app/components/: AppNavbar.tsx  GenerateTable.tsx  GraphExample.ts  GraphStyle.ts  GraphView.tsx  ImportCsv.tsx  TableView.tsx  calc.ts  fetch.ts  links.tsx  logo.tsx  parse.ts  table.tsx  tokenize.ts  types.ts
client/app/generate/: TODO.md  diff.ts  example_data.ts  page.tsx  relation.ts
client/app/graph/: calc.test.ts  calc.ts  page.tsx  parse.ts
client/app/graph/form/: page.tsx
client/app/graph/relate/: page.tsx
client/app/graph/relate_graph/: TODO.md  page.tsx
client/app/graph/table/: page.tsx
client/app/table/: page.tsx  style.css
client/example_csv/: child_example.csv  graph_sample.csv  parent_example.csv  parent_table_example.csv  relation_example.csv  test.csv
client/graphql/: createTable.graphql  getAllColumns.graphql  getAllRecords.graphql
client/src/app/: layout.tsx  page.tsx
client/styles/: global.css
server/: Cargo.toml  schema.graphql
server/examples/: import_csv.sql  mutaion.graphql  titanic_table.sql
server/src/: db.rs  main.rs  model.rs
server/src/model/: mutation.rs  query.rs
table-assert/: schema.sql
table-assert/src/: db.rs  main.rs
table-assert/src/model/: mutation.rs  query.rs
