[package]
name = "table-assert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rocket = "0.5.0-rc.1"
rocket_cors = "0.6.0"
async-graphql = "7"
async-graphql-rocket = "7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = "0.4"
csv = "1.1"
